[workspace]
members = [
  "set-1/challenge-1",
  "set-1/challenge-2",
  "set-1/challenge-3",
  "set-1/challenge-4",
  "set-1/challenge-5",
  "set-1/challenge-6",
  "set-1/challenge-7",
  "set-1/challenge-8",
  "set-2/challenge-9",
  "set-2/challenge-10",
  "set-2/challenge-11",
  "set-2/challenge-12",
  "set-2/challenge-13",
]
